@@ -1,0 +1,36 @@
+
+<h1>Donate to LilyPond development</h1> 
+
+<p>
+<! ideas taken from Sodipodi website. Thanks, Lauris !>
+
+LilyPond is libre software: using, copying and changing is and will
+remain free. Nevertheless, donating money to the LilyPond project is a
+good idea:
+
+<ul>
+<li>The positive feedback keeps us motivated.
+
+<li>It pays for attending conferences and shows, which will attract
+more users and more developers.
+
+<li>It motivates developers to support <em>your</em> platform.
+
+<li>It motivates developers to write the features that <em>you</em>
+want, not those that are cool to write.
+
+<li>It will get you those warm, fuzzy vibes for doing something good.
+
+<li>It pays for the beverages that will inspire us to write even
+cooler features :-)
+
+</ul>
+
+The suggested amount is EUR 15.  Send your donation via <a
+href=http://www.paypal.com>PayPal</a> to <tt>hanwen@xs4all.nl</tt>.
+Don't forget to tell us your special wishes (which platform you use,
+what kind of music you print, and/or which features you want)
+<p>
+
+The alternative to donating is <a
+href="../devel/participating/">participating in development</a>.
